# TutorialOfCMake

./: README.md
cmake-3.28.1-tutorial-source/Step1/: CMakeLists.txt  README.md  tutorial.cxx
cmake-3.28.1-tutorial-source/Step1_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-3.28.1-tutorial-source/Step1_build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Tutorial  build.ninja  cmake_install.cmake  compile_commands.json
cmake-3.28.1-tutorial-source/Step1_build_debug/.cmake/api/v1/reply/: cache-v2-0b5b8b2adb875c999f00.json  cmakeFiles-v1-ae1348891deb312bc09a.json  codemodel-v2-be107b3061765ca75327.json  index-2024-01-15T04-28-23-0900.json  target-Tutorial-Debug-6174c85b917267841587.json
cmake-3.28.1-tutorial-source/Step2/: CMakeLists.txt  README.md
cmake-3.28.1-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake-3.28.1-tutorial-source/Step2_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-3.28.1-tutorial-source/Step2_build/MathFunctions/: Makefile  cmake_install.cmake
cmake-3.28.1-tutorial-source/Step2_build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Tutorial  build.ninja  cmake_install.cmake  compile_commands.json
cmake-3.28.1-tutorial-source/Step2_build_debug/.cmake/api/v1/reply/: cache-v2-cac11e4c09cec9843b9c.json  cmakeFiles-v1-ec15bca3f4c145e927b0.json  codemodel-v2-aeb85b1cee677fb7e650.json  index-2024-01-15T12-43-44-0730.json  target-MathFunctions-Debug-b64f90fb517340860fd8.json  (+2 more)
cmake-3.28.1-tutorial-source/Step2_build_debug/MathFunctions/: cmake_install.cmake
